0.9.0 - currently working on

Features:

Bug fixes:
- [#5185] Change the extension name in the manual from "phpunit" to "oelib"

Cleanup:

Changes:
- [#5229] Deprecate ConfigCheck::checkLocale
- [#5223] Remove the reference to 3rd party libraries from the manual
- [#5216] Mark the extension as stable


0.8.0 - released 2015-01-06
- [#5185] Feature: Convert the manual to ReST
- [#4790] Change: Move the static tables extbase models to the static_info_tables extension
- [#5191] Fix: Fix code inspection warnings
- [#5212] Change: Drop the ImageSourceViewHelper
- [#5202] Change: Update Emogrifier
- [#5205] Cleanup: Add wrappers for the GLOBALS
- [#5206] Cleanup: Drop the unset from tearDown()
- [#5198] Cleanup: Make setUp and tearDown protected
- [#5204] Cleanup: Backport the TestingFramework changes from PHPUnit
- [#5203] Cleanup: Shorten the boolean casts
- [#5201] Cleanup: Convert intval/float to casts
- [#5200] Cleanup: boolean -> bool, integer -> int
- [#5088] Cleanup: Shorten the die() line
- [#4320] Cleanup: Add @var type hinting to help static code checkers and code completion
- [#5199] Cleanup: Use $GLOBALS['TCA'] instead of $TCA
- [#5197] Cleanup: Use comments instead of PHPDoc style comments in copyright block
- [#5195] Fix: Unit test failure for TranslatorRegistry in 6.2
- [#4400] Cleanup: Use strict comparisons
- [#4035] Cleanup: Use the Foo[]/tx_oelib_List<Foo> notation for @param and @var
- [#1535] Cleanup: Stop defining constants in unit tests
- [#5177] Fix: Test failure in PHPUnit 4.3
- [#5176] Change: Update maximum PHP version to 5.6
- [#5171] Fix: Fix warnings in the deprecation log
- [#5170] Feature: Port more TestingFramework changes from PHPUnit
- [#5169] Fix: Get the unit tests to green in TYPO3 CMS 6.2 again
- [#5168] Fix: Use a NullCacheBackend for the RootlineCache
- [#5167] Fix: Code indented with spaces
- [#5166] Fix: Port TestingFramework changes from the PHPUnit extension
- [#5135] Feature: Enhance the error message about missing setData