@@ -4,6 +4,7 @@ Features:
 
 Bug fixes:
 - [#5185] Change the extension name in the manual from "phpunit" to "oelib"
+- [#5247] Drop bogus test fakeFrontEndCobjImageCreatesImageTagForExistingImageFile
 
 Cleanup:
 
